	- Minor wording fixes to various messages.  Changes to
	  load_history(), shortcut_init(), toggle_init(), usage(),
	  do_suspend(), do_input(), rcfile_error(), parse_argument(),
	  parse_rcfile(), nano.1, nano.texi, and nanorc.sample.in.
	  (Benno Schulenberg, minor tweaks by DLR and Nick Warne)
	- Make suspension clear the screen and put the cursor on the
	  last line before displaying anything, as Pico does.  Changes
	  to do_suspend(), do_continue(), and terminal_init(). (DLR)
- browser.c:
  do_browser()
	- Reference NANO_GOTODIR_(ALT|F)?KEY instead of
	  NANO_GOTOLINE_(ALT|F)?KEY for the "Go to Directory" shortcut.
	  (DLR)
  parse_browser_input()
	- Remove redundant key checks. (DLR)
  browser_refresh()
	- Rename variable editline to line, for consistency. (DLR)
	- Change variable i from an int to a size_t in order to match
	  selected, which it's compared against. (DLR)
- color.c:
  color_update()
	- Fix incorrect setting of defcolor, which prevented the
	  reserved "default" syntax from being handled correctly. (DLR)
- cut.c:
  cut_to_eof()
	- New function, containing the main functionality of
	  do_cut_till_end(). (DLR)
  do_cut_text()
	- Add parameter cut_till_end, to indicate when we're cutting
	  from the current cursor position to the end of the file, and
	  call cut_to_eof() when it's TRUE. (DLR)
  do_cut_till_end()
	- Convert to a wrapper for do_cut_text(). (DLR)
- files.c:
  open_file()
	- Remove redundant wording in the error message when we try to
	  open a device file. (DLR)
  safe_tempfile()
	- Don't ignore $TMPDIR if it's set but blank, for consistency.
	  (DLR)
  write_file()
	- Don't free backupname before displaying it in a statusbar error
	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)